--- a/AGDPMS.Shared/Components/Layout/MainLayout.razor
+++ b/AGDPMS.Shared/Components/Layout/MainLayout.razor
@@ -146,7 +146,7 @@
     </div>
 
     @* load SignalR + bridge (served from Web project wwwroot) *@
-    <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@7/dist/browser/signalr.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/@@microsoft/signalr@7/dist/browser/signalr.min.js"></script> 
     <script src="/js/notifications.js"></script>
     <script src="/js/print.js"></script>
 </div>
