--- a/AGDPMS.Web/Components/Inventory/ManageReceipt.razor
+++ b/AGDPMS.Web/Components/Inventory/ManageReceipt.razor
@@ -1,4 +1,4 @@
-﻿@page "/inventory/stock"
+﻿@page "/inventory/receipt"
 @rendermode InteractiveServer
 
 @using AGDPMS.Shared.Models
@@ -11,38 +11,26 @@
 
 <PageTitle>Kho</PageTitle>
 
-<h3>Quản lý kho</h3>
+<h3>Quản lý nhập kho</h3>
 
 <div class="card mb-3">
-    <h5 class="card-header">Bộ lọc tìm kiếm</h5>
+    <h5 class="card-header">Tìm kiếm</h5>
     <div class="m-3">
-        <div class="row mb-3">
-            <label class="col-form-label col-2"><span class="align-middle">Mã hoặc tên</span></label>
-            <div class="col-10">
+        <div class="row">
+            <div class="col-6">
                 <input type="search"
-                       class="form-row form-control col-10" 
+                       class="form-row form-control col-10"
                        placeholder="Tìm kiếm theo mã hoặc tên"
                        value="@search_term" @oninput="Search" />
             </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-form-label col-2">Loại vật tư</label>
-            <div class="col-10">
-                <select class="form-control form-row" @oninput="Select">
-                    <option>Toàn bộ</option>
-                    @for (int i = 0; i < material_types.Count(); i++)
-                    {
-                        <option>@material_types.ElementAt(i).Name</option>
-                    }
-                </select>
+            <label class="col-1" for="from">Từ</label>
+            <div class="col-2">
+                <input id="from" class="col form-control" type="date" lang="vi" />
             </div>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input form-row"
-                   type="checkbox" 
-                   checked="@show_only_with_stocks" 
-                   @oninput="OnSelectCheckBox" />
-            <label class="form-check-label">Chỉ hiển thị vật tư còn trong kho</label>
+            <label class="col-1" for="to">Đến</label>
+            <div class="col-2">
+                <input id="to" class="col form-control" type="date" lang="vi" />
+            </div>
         </div>
     </div>
 </div>
@@ -87,19 +75,19 @@
                         <th>Tên</th>
                         <th>Loại vật tư</th>
                         <th>Kích thước</th>
-                        <th>Tồn kho</th>
+                        <th>Số lượng</th>
                         <th>Giá</th>
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
-                    @foreach(Material m in items)
+                    @foreach (Material m in items)
                     {
                         <tr>
                             <td rowspan="@(@m.Stocks.Count() + 1)">@m.Id</td>
                             <td rowspan="@(@m.Stocks.Count() + 1)">@m.Name</td>
                             <td rowspan="@(@m.Stocks.Count() + 1)">@m.Type.Name</td>
                         </tr>
-                        @foreach(MaterialStock ms in m.Stocks)
+                        @foreach (MaterialStock ms in m.Stocks)
                         {
                             <tr>
                                 <td>@ms.Length</td>
@@ -133,30 +121,29 @@
     private int current_page = 1;
     private int pageSize = Int32.MaxValue;
 
-    protected override async Task OnInitializedAsync()
-    {
-        is_loading = true;
+    // protected override async Task OnInitializedAsync()
+    // {
+    //     is_loading = true;
 
-        mt_res = await inventoryService.GetMaterialType();
-        if (mt_res.Success)
-        {
-            material_types = mt_res.MaterialTypes;
-            // select_value = 
-        }
-        m_res = await inventoryService.GetMaterial();
-        if (m_res.Success)
-        {
-            materials = m_res.Materials;
-            items = materials.ToArray();
-        }
-        else
-        {
-            load_error = true;
-        }
-        PerformSearch(null);
-        is_loading = false;
-        StateHasChanged();
-    }
+    //     mt_res = await inventoryService.GetMaterialType();
+    //     if (mt_res.Success)
+    //     {
+    //         material_types = mt_res.MaterialTypes;
+    //     }
+    //     m_res = await inventoryService.GetMaterial();
+    //     if (m_res.Success)
+    //     {
+    //         materials = m_res.Materials;
+    //         items = materials.ToArray();
+    //     }
+    //     else
+    //     {
+    //         load_error = true;
+    //     }
+    //     PerformSearch(null);
+    //     is_loading = false;
+    //     StateHasChanged();
+    // }
 
     private void Search(ChangeEventArgs e)
     {
